--- a/backend/public/mix-manifest.json
+++ b/backend/public/mix-manifest.json
@@ -1,4 +1,3 @@
 {
-    "/js/app.js": "/js/app.js?id=2df838f08e820f5a655d",
-    "/css/app.css": "/css/app.css?id=91d5ac8a933585869aef"
+    "/js/app.js": "/js/app.js?id=fe5242adeda306b9d84e"
 }
